# Bailiff_Judge_Info

./: app.db  config.py  dbsetup.py  dbtest.py  main.py  pyproject.toml  roadmap  schedule.xls
app/: __init__.py  models.py
app/auth/: forms.py  routes.py
app/main/: forms.py  routes.py
app/schedule/: import_sched.py  routes.py
app/templates/: _post.html  base.html  edit_post.html  edit_profile.html  index.html  judge.html  sandbox.html  upload.html  user.html
app/templates/auth/: change_password.html  edit_user.html  login.html
app/templates/schedule/: schedule.html
migrations/versions/: 2c9bd9ff94cc_users_posts_judges.py  4568e7bfec90_user_post_judges_tables.py  4732b09c085b_users_judges.py  7266ba14494d_users_judges_categories_posts.py  95105c7bf9ed_users_posts_judges_tables.py  d1518276bba0_user_about_me.py  f344c010e98b_workday.py
